--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        dev {
+            dimension "default"
+            minSdkVersion 21
+        }
+        prod {
+            dimension "default"
+            minSdkVersion versions.minSdk
+        }
+    }
 }
 
 dependencies {
@@ -26,7 +39,10 @@ dependencies {
 
     compile deps.kotlin
     compile deps.support.appcompat
+    compile deps.support.recyclerview
     compile deps.support.constraintLayout
+    compile deps.rxAndroid
+    compile deps.rxJava
 
     androidTestCompile(deps.support.espressoCore, {
         exclude group: 'com.android.support', module: 'support-annotations'
