--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,17 +35,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile deps.kotlin
-    compile deps.support.appcompat
-    compile deps.support.recyclerview
-    compile deps.support.constraintLayout
-    compile deps.rxAndroid
-    compile deps.rxJava
+    implementation deps.kotlin
+    implementation deps.support.appcompat
+    implementation deps.support.recyclerview
+    implementation deps.support.constraintLayout
+    implementation deps.rxAndroid
+    implementation deps.rxJava
 
-    androidTestCompile(deps.support.espressoCore, {
+    androidTestImplementation(deps.support.espressoCore, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile deps.test.junit
+    testImplementation deps.test.junit
 }
