--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ buildscript {
 
     ext.versions = [
             'minSdk'          : 14,
-            'compileSdk'      : 25,
+            'compileSdk'      : 26,
             'buildTools'      : '25.0.2',
-            'supportLibrary'  : '25.3.1',
-            'androidPlugin'   : '3.0.0-alpha3',
-            'androidTools'    : '25.2.0',
+            'supportLibrary'  : '26.+',
+            'androidPlugin'   : '3.0.0-alpha4',
+            'androidTools'    : '26.0.0',
             'kotlin'          : '1.1.2-4',
             'junit'           : '4.12',
             'constraintLayout': '1.0.2',
