--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ buildscript {
             'constraintLayout': '1.0.2',
             'espresso'        : '2.2.2',
             'rxAndroid'       : '2.0.1',
-            'rxJava'          : '2.1.0'
+            'rxJava'          : '2.1.0',
+            'room'            : '1.0.0-alpha3'
     ]
 
     ext.deps = [
@@ -32,6 +33,11 @@ buildscript {
                     'constraintLayout': "com.android.support.constraint:constraint-layout:${versions.constraintLayout}",
                     'espressoCore'    : "com.android.support.test.espresso:espresso-core:${versions.espresso}",
                     'recyclerview'    : "com.android.support:recyclerview-v7:${versions.supportLibrary}"
+            ],
+            "arch"            : [
+                    'room'                   : "android.arch.persistence.room:runtime:${versions.room}",
+                    'roomAnnotationProcessor': "android.arch.persistence.room:compiler:${versions.room}",
+                    'roomRxJava'             : "android.arch.persistence.room:rxjava2:${versions.room}"
             ],
             'rxAndroid'       : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
             'rxJava'          : "io.reactivex.rxjava2:rxjava:${versions.rxJava}"
@@ -50,6 +56,7 @@ buildscript {
     allprojects {
         repositories {
             jcenter()
+            maven { url 'https://maven.google.com' }
         }
     }
 }
