--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.2-4'
+    ext.kotlin_version = '1.1.3'
 
     ext.versions = [
             'minSdk'          : 14,
             'compileSdk'      : 26,
             'buildTools'      : '25.0.2',
             'supportLibrary'  : '26.+',
-            'androidPlugin'   : '3.0.0-alpha4',
+            'androidPlugin'   : '3.0.0-alpha5',
             'androidTools'    : '26.0.0',
-            'kotlin'          : '1.1.2-4',
+            'kotlin'          : '1.1.3',
             'junit'           : '4.12',
             'constraintLayout': '1.0.2',
             'espresso'        : '2.2.2',
@@ -56,7 +56,7 @@ buildscript {
     allprojects {
         repositories {
             jcenter()
-            maven { url 'https://maven.google.com' }
+            google()
         }
     }
 }
