--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.1.3'
+  ext.kotlin_version = '1.1.3-2'
 
   ext.versions = ['minSdk'          : 14,
                   'compileSdk'      : 26,
                   'buildTools'      : '25.0.2',
                   'supportLibrary'  : '26.+',
-                  'androidPlugin'   : '3.0.0-alpha5',
+                  'androidPlugin'   : '3.0.0-alpha8',
                   'androidTools'    : '26.0.0',
                   'kotlin'          : '1.1.3',
                   'junit'           : '4.12',
@@ -26,7 +26,8 @@ buildscript {
                                    'annotations'     : "com.android.support:support-annotations:${versions.supportLibrary}",
                                    'constraintLayout': "com.android.support.constraint:constraint-layout:${versions.constraintLayout}",
                                    'espressoCore'    : "com.android.support.test.espresso:espresso-core:${versions.espresso}",
-                                   'recyclerview'    : "com.android.support:recyclerview-v7:${versions.supportLibrary}"],
+                                   'recyclerview'    : "com.android.support:recyclerview-v7:${versions.supportLibrary}",
+                                   'design'          : "com.android.support:design:${versions.supportLibrary}"],
               "arch"            : ['room'                   : "android.arch.persistence.room:runtime:${versions.room}",
                                    'roomAnnotationProcessor': "android.arch.persistence.room:compiler:${versions.room}",
                                    'roomRxJava'             : "android.arch.persistence.room:rxjava2:${versions.room}"],
