--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
 
   ext.versions = ['minSdk'          : 14,
                   'compileSdk'      : 26,
-                  'buildTools'      : '25.0.2',
-                  'supportLibrary'  : '26.+',
+                  'buildTools'      : '26.0.0',
+                  'supportLibrary'  : '26.0.0',
                   'androidPlugin'   : '3.0.0-alpha8',
                   'androidTools'    : '26.0.0',
                   'kotlin'          : '1.1.3',
@@ -15,7 +15,7 @@ buildscript {
                   'espresso'        : '2.2.2',
                   'rxAndroid'       : '2.0.1',
                   'rxJava'          : '2.1.0',
-                  'room'            : '1.0.0-alpha3']
+                  'room'            : '1.0.0-alpha5']
 
   ext.deps = ['gradlePlugin'    : "com.android.tools.build:gradle:${versions.androidPlugin}",
               'kotlinPlugin'    : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
