--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.1.3-2'
+  ext.kotlinVersion = '1.1.3-2'
 
   ext.versions = ['minSdk'          : 14,
                   'compileSdk'      : 26,
                   'buildTools'      : '26.0.0',
                   'supportLibrary'  : '26.0.0',
-                  'androidPlugin'   : '3.0.0-alpha8',
+                  'androidPlugin'   : '3.0.0-alpha9',
                   'androidTools'    : '26.0.0',
                   'kotlin'          : '1.1.3',
                   'junit'           : '4.12',
@@ -15,24 +15,28 @@ buildscript {
                   'espresso'        : '2.2.2',
                   'rxAndroid'       : '2.0.1',
                   'rxJava'          : '2.1.0',
-                  'room'            : '1.0.0-alpha5']
+                  'room'            : '1.0.0-alpha5',
+                  'dagger'          : '2.11']
 
   ext.deps = ['gradlePlugin'    : "com.android.tools.build:gradle:${versions.androidPlugin}",
               'kotlinPlugin'    : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
               'kotlinExtensions': "org.jetbrains.kotlin:kotlin-android-extensions:${versions.kotlin}",
               'kotlin'          : "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
               'test'            : ['junit': "junit:junit:${versions.junit}"],
-              "support"         : ['appcompat'       : "com.android.support:appcompat-v7:${versions.supportLibrary}",
+              'di'              : ['dagger'        : "com.google.dagger:dagger:${versions.dagger}",
+                                   'daggerCompiler': "com.google.dagger:dagger-compiler:${versions.dagger}",
+                                   'daggerAndroid' : "com.google.dagger:dagger-android:${versions.dagger}"],
+              'support'         : ['appcompat'       : "com.android.support:appcompat-v7:${versions.supportLibrary}",
                                    'annotations'     : "com.android.support:support-annotations:${versions.supportLibrary}",
                                    'constraintLayout': "com.android.support.constraint:constraint-layout:${versions.constraintLayout}",
                                    'espressoCore'    : "com.android.support.test.espresso:espresso-core:${versions.espresso}",
                                    'recyclerview'    : "com.android.support:recyclerview-v7:${versions.supportLibrary}",
                                    'design'          : "com.android.support:design:${versions.supportLibrary}"],
-              "arch"            : ['room'                   : "android.arch.persistence.room:runtime:${versions.room}",
-                                   'roomAnnotationProcessor': "android.arch.persistence.room:compiler:${versions.room}",
-                                   'roomRxJava'             : "android.arch.persistence.room:rxjava2:${versions.room}"],
-              'rxAndroid'       : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
-              'rxJava'          : "io.reactivex.rxjava2:rxjava:${versions.rxJava}"]
+              'arch'            : ['room'        : "android.arch.persistence.room:runtime:${versions.room}",
+                                   'roomCompiler': "android.arch.persistence.room:compiler:${versions.room}",
+                                   'roomRxJava'  : "android.arch.persistence.room:rxjava2:${versions.room}"],
+              'rx'              : ['rxAndroid': "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
+                                   'rxJava'   : "io.reactivex.rxjava2:rxjava:${versions.rxJava}"]]
 
   repositories {
     jcenter()
@@ -41,7 +45,7 @@ buildscript {
     classpath deps.gradlePlugin
     classpath deps.kotlinPlugin
     classpath deps.kotlinExtensions
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 
   allprojects {
