--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".TodoxApplication">
+        android:name=".common.TodoxApplication">
         <activity android:name=".home.HomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
