--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlinVersion = '1.1.3-2'
+  ext.kotlinVersion = '1.2.41'
 
   ext.versions = ['minSdk'          : 14,
-                  'compileSdk'      : 26,
-                  'buildTools'      : '26.0.0',
-                  'supportLibrary'  : '26.0.0',
-                  'androidPlugin'   : '3.0.0-alpha9',
-                  'androidTools'    : '26.0.0',
-                  'kotlin'          : '1.1.3',
+                  'compileSdk'      : 27,
+                  'buildTools'      : '27.0.3',
+                  'supportLibrary'  : '27.1.1',
+                  'androidPlugin'   : '3.1.2',
+                  'kotlin'          : '1.2.41',
                   'junit'           : '4.12',
-                  'constraintLayout': '1.0.2',
-                  'espresso'        : '2.2.2',
-                  'rxAndroid'       : '2.0.1',
-                  'rxJava'          : '2.1.0',
-                  'room'            : '1.0.0-alpha5',
-                  'dagger'          : '2.11']
+                  'constraintLayout': '1.1.0',
+                  'espresso'        : '3.0.2',
+                  'rxAndroid'       : '2.0.2',
+                  'rxJava'          : '2.1.14',
+                  'room'            : '1.1.0',
+                  'dagger'          : '2.16']
 
   ext.deps = ['gradlePlugin'    : "com.android.tools.build:gradle:${versions.androidPlugin}",
               'kotlinPlugin'    : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
@@ -40,12 +39,12 @@ buildscript {
 
   repositories {
     jcenter()
+    google()
   }
   dependencies {
     classpath deps.gradlePlugin
     classpath deps.kotlinPlugin
     classpath deps.kotlinExtensions
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 
   allprojects {
@@ -58,4 +57,9 @@ buildscript {
 
 task clean(type: Delete) {
   delete rootProject.buildDir
+}
+
+repositories {
+  jcenter()
+  google()
 }
